# workspace-generator

./: .gitignore  README.md  pyproject.toml
blueprints/: product-catalog.example.yaml  student-management.example.yaml
docs/: README.md
docs/adr/: 0001-use-workspace-instead-of-platform.md  README.md
docs/plans/: 0001-workspace-preview-tree.md  README.md
templates/index/: .gitignore.j2  COMPONENTS.md.j2  README.md.j2  REPOSITORIES.md.j2  ROADMAP.md.j2  STATUS.md.j2  WORKSPACE-CARD.md.j2
templates/infra/: .gitignore.j2  README.md.j2
templates/infra/compose/: compose.DEV.yml.j2  compose.PROD.yml.j2  compose.SIT.yml.j2  compose.UAT.yml.j2  compose.local.override.yml.j2  compose.local.yml.j2
templates/infra/docs/: COMPONENTS.md.j2  DEPLOYMENT.md.j2  ENVIRONMENTS.md.j2  LOCAL-DEBUG.md.j2  PORT-FORWARDING.md.j2  VERSIONING.md.j2
templates/infra/env/: env.j2
templates/infra/port-forwarding/: forwarding.yaml.j2
templates/infra/scripts/: check-versions.sh.j2  logs.sh.j2  reset-local.sh.j2  smoke-test.sh.j2  start-local.sh.j2  start-port-forwarding.sh.j2  start-with-local-component.sh.j2  status-port-forwarding.sh.j2  stop-local.sh.j2  stop-port-forwarding.sh.j2  stop-with-local-component.sh.j2  validate-compatibility.sh.j2
templates/repository/: .env.example.j2  .gitignore.j2  AGENTS.md.j2  Dockerfile.j2  PROJECT-CARD.md.j2  README.md.j2  VERSION.j2
tests/: test_generator.py  test_preview.py
workspace_generator/: __init__.py  __main__.py  cli.py  config.py  filesystem.py  generator.py  models.py  preview.py  renderer.py
(+11 files in other folders)
