[project]
name = "workspace-generator"
version = "0.1.0"
description = "A CLI tool for generating structured local workspaces from YAML blueprints"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vitalii Supryhan"},
]
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "Jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
workspace-generator = "workspace_generator.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = ["workspace_generator"]
